--- a/public/landing/css/style.css
+++ b/public/landing/css/style.css
@@ -176,12 +176,12 @@
     align-items: center;
   }
   
- /* .feather-search {
+ .feather-search {
     position: absolute;
     left: 10px; 
     top: 50%;
     transform: translateY(-50%);
-  } */
+  }
   
 
 
