--- a/public/landing/css/style.css
+++ b/public/landing/css/style.css
@@ -465,3 +465,18 @@ object {
     top: 50%;
     transform: translateY(-50%);
 }
+
+.card {
+    flex: 1; /* Agar setiap card punya ukuran yang sama */
+    transition: transform 0.3s ease-in-out;
+    background-image: linear-gradient(to bottom right, #ffcc00, #ff9900);
+    border-radius: 0.375rem; /* Rounded corners */
+    padding: 0.75rem;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
