--- a/public/landing/css/survey.css
+++ b/public/landing/css/survey.css
@@ -1,30 +1,103 @@
 body {
   font-family: Arial, sans-serif;
   text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+form {
+  margin: 0 auto;
+  text-align: left;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="number"],
+select {
+  width: calc(100% - 10px);
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+input[type="submit"] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  position: relative;
+  left: 400px;
+
+}
+
+
+input[type="submit"]:hover {
+  background-color: #45a049;
+  position: relative;
 }
 
 .container {
-  width: 300px;
+  width: 500px;
   margin: 50px auto;
-}
-
-h1 {
-    position: relative;
-    right: 300px;
-    top: 115px;
-    text-align: center;
-}
-
-.box {
-  padding: 20px;
   border: 1px solid #ccc;
-  background-color: #f9f9f9;
-  margin-top: 20px;
+  padding: 20px;
+  text-align: right;
   position: relative;
-  right: 300px;
-  top: 150px;
+  top: 50px;
 }
 
-.box p {
-  margin-bottom: 20px;
+.container label,
+.container select,
+.container input[type="text"],
+.container input[type="number"] {
+  display: block;
+  margin-bottom: 10px;
+  width: calc(100% - 20px); /* Mengatur lebar elemen agar rata kiri */
+  padding: 5px;
+  position relative;
+  right: 40px;
+
 }
+
+.container .double-column {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.container .double-column select,
+.container .double-column input[type="number"],
+.container .double-column input[type="text"] {
+  flex-basis: calc(50% - 5px);
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.double-column-left {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  right: 50px;
+}
+
+.double-column-left label,
+.double-column-left input,
+.double-column-left select {
+  width: 100%;
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.asd{
+  position: relative;
+}
+
