--- a/public/landing/css/style.css
+++ b/public/landing/css/style.css
@@ -482,6 +482,11 @@ object {
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* efek glowing */
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .service-title {
     text-align: center;
     font-size: 1.125rem;
