--- a/public/landing/css/style.css
+++ b/public/landing/css/style.css
@@ -479,7 +479,7 @@ object {
 
 .footer p a:hover {
   color: #fff; /* warna tulisan putih pada hover */
-  text-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* efek glowing */
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(255, 255, 255, 0.8), 0 0 30px rgba(255, 255, 255, 0.8);
 }
 
 .text-sm {
