--- a/public/landing/css/body.css
+++ b/public/landing/css/body.css
@@ -22,13 +22,13 @@ body {
 }
 
 .button {
-	background-color: #f19e00;
+	background-color: #f10000;
 	border: none;
 	color: white;
 	padding: 16px 32px;
 	text-align: center;
 	text-decoration: none;
-	font-size: 12px;
+	font-size: 30px;
 	transition: 0.3s;
 }
 
