--- a/public/landing/css/survey.css
+++ b/public/landing/css/survey.css
@@ -43,9 +43,9 @@ button {
 
 .btn-back {
   position: absolute;
-  margin-right: 140px;
+  margin-left: 10px;
   margin-bottom: 10px;
-  right: 0;
+  left: 0;
   bottom: 0;
 }
 
@@ -73,9 +73,6 @@ input[type="submit"]:hover {
   text-align: right;
   position: relative;
   top: 50px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
 }
 
 .container label,
@@ -173,14 +170,15 @@ input[type="submit"]:hover {
   color: #333;
 }
 
+/* Gaya untuk radio button */
 input[type="radio"] {
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
-  width: 25px;
-  height: 25px;
+  width: 16px;
+  height: 16px;
   border-radius: 50%;
-  border: 2px solid #000;
+  border: 2px solid #000000;
   outline: none;
   cursor: pointer;
   transition: background-color 0.3s, border-color 0.3s;
@@ -188,69 +186,11 @@ input[type="radio"] {
 
 /* Gaya radio button ketika diklik */
 input[type="radio"]:checked {
-  background-color: #2200ff;
+  background-color: #2200ff; /* Warna oranye */
   border-color: #ffffff;
 }
 
 /* Gaya radio button ketika dihover */
 input[type="radio"]:hover {
-  background-color: rgba(0, 183, 255, 0.5);
-}
-
-
-/* Gaya label dengan kelas khusus */
-.radio-label {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  font-weight: 500;
-  position: relative;
-  overflow: hidden;
-  margin-bottom: 0.375em;
-  font-family: "Inter", sans-serif;
-  color: #3f3f3f;
-  font-size: 12;
-}
-
-/* Gaya label ketika dipilih */
-.radio-label:active {
-  background-color: rgba(0, 183, 255, 0.2);
-}
-
-.radio-label input {
-  position: absolute;
-  left: -9999px;
-}
-
-.radio-label input:checked + span {
-  background-color: #d9d9d9; /* Sesuaikan dengan warna latar belakang .container */
-}
-
-.radio-label input:checked + span:before {
-  box-shadow: inset 0 0 0 0.4375em #00005c;
-}
-
-.radio-label span {
-  display: flex;
-  align-items: center;
-  padding: 0.375em 0.75em 0.375em 0.375em;
-  border-radius: 99em;
-  transition: 0.25s ease;
-}
-
-.radio-label span:hover {
-  background-color: #d9d9d9; /* Sesuaikan dengan warna latar belakang .container saat hover */
-}
-
-.radio-label span:before {
-  display: flex;
-  flex-shrink: 0;
-  content: "";
-  background-color: #fff;
-  width: 1.5em;
-  height: 1.5em;
-  border-radius: 50%;
-  margin-right: 0.375em;
-  transition: 0.25s ease;
-  box-shadow: inset 0 0 0 0.125em #00005c;
+  background-color: rgb(0, 183, 255); /* Warna oranye transparan */
 }
