--- a/public/landing/css/layanan.css
+++ b/public/landing/css/layanan.css
@@ -1,11 +1,11 @@
-.box-container {
+.kotak-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between; /* Menempatkan kotak di tiga kolom */
     margin-top: 20px;
 }
 
-.box {
+.kotak {
     width: calc(33.33% - 20px); /* Menggunakan calc untuk menghitung lebar setiap kotak dengan jarak antar kotak */
     padding: 20px;
     border: 1px solid #ccc;
