--- a/public/landing/css/survey.css
+++ b/public/landing/css/survey.css
@@ -1,196 +1,267 @@
 body {
-  font-family: Arial, sans-serif;
-  text-align: center;
-  margin: 0;
-  padding: 0;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 form {
-  margin: 0 auto;
-  text-align: left;
+    margin: 0 auto;
+    text-align: left;
 }
 
 label {
-  display: block;
-  margin-bottom: 5px;
+    display: block;
+    margin-bottom: 5px;
 }
 
 input[type="text"],
 input[type="number"],
 select {
-  width: calc(100% - 10px);
-  padding: 8px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+    width: calc(100% - 10px);
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 
 button {
-  background-color: #4CAF50;
-  color: white;
-  width: 120px;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  position: absolute;
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  right: 0;
-  bottom: 0;
+    background-color: #4caf50;
+    color: white;
+    width: 120px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    position: absolute;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    right: 0;
+    bottom: 0;
 }
 
 .btn-back {
-  position: absolute;
-  margin-left: 10px;
-  margin-bottom: 10px;
-  left: 0;
-  bottom: 0;
-}
-
-.btn-reset {
-  background-color: #ff0000;
-  position: absolute;
-  margin-left: 20px;
-  margin-bottom: 10px;
-  left: 0;
-  bottom: 0;
+    position: absolute;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    left: 0;
+    bottom: 0;
 }
 
 input[type="submit"]:hover {
-  background-color: #45a049;
-  position: relative;
+    background-color: #45a049;
+    position: relative;
 }
 
 .container {
-  background-color: #D9D9D9;
-  width: 500px;
-  margin: 50px auto;
-  border: 1px solid #ccc;
-  border-radius: 20px;
-  padding: 20px;
-  text-align: right;
-  position: relative;
-  top: 50px;
+    background-color: #d9d9d9;
+    width: 500px;
+    margin: 50px auto;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    padding: 20px;
+    text-align: right;
+    position: relative;
+    top: 50px;
 }
 
 .container label,
 .container select,
 .container input[type="text"],
 .container input[type="number"] {
-  display: block;
-  margin-bottom: 10px;
-  width: calc(100% - 20px); /* Mengatur lebar elemen agar rata kiri */
-  padding: 5px;
-  right: 40px;
-
+    display: block;
+    margin-bottom: 10px;
+    width: calc(100% - 20px);
+    padding: 5px;
+    /* right: 40px; */
 }
 
 .container .double-column {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
 }
 
 .container .double-column select,
 .container .double-column input[type="number"],
 .container .double-column input[type="text"] {
-  flex-basis: calc(50% - 5px);
+    flex-basis: calc(50% - 5px);
 }
 
 #saran {
-  width: 100%; /* Sesuaikan dengan lebar yang diinginkan */
-  height: 150px; /* Sesuaikan dengan tinggi yang diinginkan */
-  resize: none;
+    width: 100%; /* Sesuaikan dengan lebar yang diinginkan */
+    height: 150px; /* Sesuaikan dengan tinggi yang diinginkan */
+    resize: none;
 }
 
 .garis-horizontal {
-  border-top: 1px solid #000;
-  margin: 10px 0;
+    border-top: 1px solid #000;
+    margin: 10px 0;
 }
 
 .form-group {
-  margin-bottom: 15px;
+    margin-bottom: 15px;
 }
 
 .double-column-left {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  right: 50px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    right: 50px;
 }
 
 .double-column-left label,
 .double-column-left input,
 .double-column-left select {
-  width: 100%;
-  margin-bottom: 10px;
-  position: relative;
+    width: 100%;
+    margin-bottom: 10px;
+    position: relative;
 }
 
-.asd{
-  position: relative;
+.asd {
+    position: relative;
 }
 
 /* Gaya Navbar */
 .navbar {
-  background-color: #f0f0f0; /* Warna latar belakang navbar */
-  padding: 10px 0; /* Padding untuk navbar */
+    background-color: #f88400; /* Warna latar belakang navbar */
+    padding: 10px 0; /* Padding untuk navbar */
 }
 
 .a {
-  max-width: 1200px; /* Menetapkan lebar maksimum untuk kontainer */
-  height: 50PX;
-  margin: 0 auto; /* Pusatkan kontainer */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    max-width: 1200px; /* Menetapkan lebar maksimum untuk kontainer */
+    height: 50px;
+    margin: 0 auto; /* Pusatkan kontainer */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .navbar-brand {
-  font-size: 24px; /* Ukuran font untuk brand/logo */
-  color: #333; /* Warna untuk brand/logo */
-  text-decoration: none;
+    font-size: 24px; /* Ukuran font untuk brand/logo */
+    color: #333; /* Warna untuk brand/logo */
+    text-decoration: none;
+    font-weight: bold;
 }
 
 .navbar-nav {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .nav-item {
-  display: inline-block;
-  margin-left: 20px;
+    display: inline-block;
+    margin-left: 20px;
 }
 
 .nav-item a {
-  text-decoration: none;
-  color: #333;
+    text-decoration: none;
+    color: #333;
 }
 
-/* Gaya untuk radio button */
-input[type="radio"] {
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  border: 2px solid #000000;
-  outline: none;
-  cursor: pointer;
-  transition: background-color 0.3s, border-color 0.3s;
+/* Gaya label di dalam .question */
+.question label {
+    display: block;
+    margin-bottom: 0.375em; /* Ubah sesuai kebutuhan */
+    font-family: "Inter", sans-serif;
+    color: #3f3f3f;
+    font-size: 15px;
 }
 
-/* Gaya radio button ketika diklik */
-input[type="radio"]:checked {
-  background-color: #2200ff; /* Warna oranye */
-  border-color: #ffffff;
+/* Gaya radio button di dalam .question */
+.question input[type="radio"] {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 2px solid #000;
+    outline: none;
+    cursor: pointer;
+    transition: background-color 0.3s, border-color 0.3s;
 }
 
-/* Gaya radio button ketika dihover */
-input[type="radio"]:hover {
-  background-color: rgb(0, 183, 255); /* Warna oranye transparan */
+/* Gaya label dengan kelas khusus */
+.question .radio-label {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    font-weight: 500;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 0.375em;
+}
+
+/* Gaya label ketika dihover */
+/* .question .radio-label:hover {
+  background-color: rgba(0, 183, 255, 0.1);
+} */
+
+/* Gaya label ketika dipilih */
+/* .question .radio-label:active {
+  background-color: rgba(0, 183, 255, 0.2);
+} */
+
+.question .radio-label input {
+    position: absolute;
+    left: -9999px;
+}
+
+.question .radio-label input:checked + span {
+    background-color: #f4c085; /* Sesuaikan dengan warna latar belakang .question */
+}
+
+.question .radio-label input:checked + span:before {
+    box-shadow: inset 0 0 0 0.4375em #f88400;
+}
+
+.question .radio-label span {
+    display: flex;
+    align-items: center;
+    padding: 0.375em 0.75em 0.375em 0.375em;
+    border-radius: 99em;
+    transition: 0.25s ease;
+}
+
+.question .radio-label span:hover {
+    background-color: #f4c085; /* Sesuaikan dengan warna latar belakang .container saat hover */
+}
+
+.question .radio-label span:before {
+    display: flex;
+    flex-shrink: 0;
+    content: "";
+    background-color: #fff;
+    width: 1.5em;
+    height: 1.5em;
+    border-radius: 50%;
+    margin-right: 0.375em;
+    transition: 0.25s ease;
+    box-shadow: inset 0 0 0 0.125em #f88400;
+}
+
+#saran {
+    font-family: "Inter", sans-serif;
+    color: #000000;
+    font-size: 20px;
+}
+
+#terima_kasih {
+    text-align: center; /* Tengahkan teks secara horizontal */
+    display: flex; /* Tengahkan konten secara vertikal */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#countdown {
+    margin-top: 20px; /* Atur margin atas untuk memberikan ruang di antara pesan dan tombol kembali */
+}
+
+#timer {
+    font-size: 24px; /* Sesuaikan ukuran font sesuai kebutuhan */
+    font-weight: bold;
 }
