--- a/public/landing/css/layanan.css
+++ b/public/landing/css/layanan.css
@@ -8,7 +8,7 @@
 .kotak {
     width: calc(33.33% - 20px); /* Menggunakan calc untuk menghitung lebar setiap kotak dengan jarak antar kotak */
     padding: 20px;
-    border: 1px solid #ccc;
+    border: none;
     border-radius: 10px;
     background-color: #f19e00;
     color: white;
@@ -20,6 +20,11 @@
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.kotak h4 {
+    font-size: 1.5vw; /* Menggunakan vw untuk ukuran font responsif */
 }
 
 .bar-chart {
@@ -46,12 +51,12 @@
 }
 
 .display-3 {
-    font-size: 2.5rem; /* Ubah ukuran font sesuai keinginan Anda */
+    font-size: 2.5rem; 
 }
 
-/* Atau jika Anda ingin membuat lebih kecil dan bold hanya pada elemen dengan teks "DEKRANASDA" */
+
 .display-3.text-left {
-    font-size: 2.5rem; /* Ubah ukuran font sesuai keinginan Anda */
+    font-size: 2.5rem; 
 }
 
 .display-3.mb-5.text-left {
