--- a/public/landing/css/layanan.css
+++ b/public/landing/css/layanan.css
@@ -23,8 +23,27 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.kotak h4 {
-    font-size: 1.5vw; /* Menggunakan vw untuk ukuran font responsif */
+.kotak canvas {
+    width: 100% !important;
+    height: auto;
+}
+
+.garis-horizontal {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+/* Media query untuk layar lebih kecil */
+@media (max-width: 768px) {
+    .kotak {
+        width: calc(33.33% - 20px);
+    }
+
+    .kotak-container > div:nth-child(4),
+    .kotak-container > div:nth-child(5),
+    .kotak-container > div:nth-child(6){
+        width: 100%;
+    }
 }
 
 .bar-chart {
@@ -42,21 +61,12 @@
     color: black;
 }
 
-#barChart,
-#doughnutChartEdu,
-#doughnutChartJob {
-    width: 400px; /* Mengubah lebar diagram */
-    height: 300px; /* Mengubah tinggi diagram */
-    margin-right: 20px; /* Menambahkan jarak antara diagram */
-}
-
 .display-3 {
-    font-size: 2.5rem; 
+    font-size: 2.5rem;
 }
-
 
 .display-3.text-left {
-    font-size: 2.5rem; 
+    font-size: 2.5rem;
 }
 
 .display-3.mb-5.text-left {
