--- a/public/landing/css/style.css
+++ b/public/landing/css/style.css
@@ -513,32 +513,14 @@ object {
     line-height: 1.25rem;
 }
 
-/* Tambahkan CSS ini untuk mengatur gambar di tengah dan mempertahankan ukuran setelah pencarian */
-.search-result .logo-container {
-    background-color: white;
-    margin-bottom: 1rem;
-    border-radius: 50%;
-    width: 8.25rem;
-    height: 8.25rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-}
-
-.search-result .logo {
-    max-width: 100%;
-    height: auto;
-    margin: 0 auto; /* Memastikan gambar berada di tengah */
-}
-
-
-
-
 .service-title {
     text-align: center;
     font-size: 1.125rem;
     font-weight: 500;
+}
+
+element.style {
+    display: block;
 }
 
 .search-container {
