--- a/public/landing/css/style.css
+++ b/public/landing/css/style.css
@@ -514,6 +514,14 @@ object {
         0 0 20px rgba(255, 255, 255, 0.8), 0 0 30px rgba(255, 255, 255, 0.8);
 }
 
+/* .box {
+    display: block; 
+} */
+
+.box.hidden {
+    display: none;
+}
+
 .text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
