tatacara udah responsif

--- a/public/landing/css/layanan.css
+++ b/public/landing/css/layanan.css
@@ -28,6 +28,15 @@
     height: auto;
 }
 
+.kotak h2 {
+    font-size: 2vw;
+    font-weight: bold; 
+}
+
+.kotak p {
+    font-size: 3vw; 
+}
+
 .garis-horizontal {
     width: 100%;
     box-sizing: border-box;
