--- a/public/landing/css/resp.css
+++ b/public/landing/css/resp.css
@@ -33,3 +33,9 @@
 		width: 300px;
 	}
 }
+
+@media (max-width: 768px) {
+	.navbar-brand img {
+		height: 90px; /* Sesuaikan ukuran yang diinginkan */
+	}
+}
