--- a/public/landing/css/survey.css
+++ b/public/landing/css/survey.css
@@ -35,8 +35,11 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    position: absolute;
     margin-top: 10px;
+}
+
+.btn-next {
+    position: absolute;
     margin-right: 20px;
     margin-bottom: 10px;
     right: 0;
