--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1059,13 +1059,13 @@ table tr:hover .table-links {
 
 /* 3.10 Pagination */
 .page-item .page-link {
-  color: #47c363;
+  color: #ff8c00;
   border-radius: 3px;
   margin: 0 3px; }
 
 .page-item.active .page-link {
-  background-color: #47c363;
-  border-color: #47c363; }
+  background-color: #ff8c00;
+  border-color: #ff8c00; }
 
 .page-item.disabled .page-link {
   border-color: transparent;
@@ -1078,7 +1078,7 @@ table tr:hover .table-links {
   background-color: #f9fafe;
   font-weight: 600; }
   .page-link:hover {
-    background-color: #47c363;
+    background-color: #ff8c00;
     color: #fff;
     border-color: transparent; }
   .page-link:focus {
